updating styling (aligning center - cleaning code - fix list)

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -50,15 +50,20 @@ figcaption {
 body {
   max-width: 960px;
   min-width: 480px;
+  text-align: center;
+}
+
+.list {
+  text-align: left;
 }
 
 @media screen and (max-width: 875px) {
   #external-links {
     display: block;
     width: 100%;
-    text-align: center;
     font-size: 20px;
   }
+
   main {
     display: block;
     width: 100%;
